--- a/Kosmisch.Sample.OnPremisesAspnetApp/Views/Users/Edit.cshtml
+++ b/Kosmisch.Sample.OnPremisesAspnetApp/Views/Users/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Users", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -34,10 +34,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProfileImageName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <label for="profile">プロフィール画像</label>
+            </div>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProfileImageName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProfileImageName, "", new { @class = "text-danger" })
+                <input type="file" name="profile" />
             </div>
         </div>
 
