--- a/Kosmisch.Sample.OnPremisesAspnetApp/Views/Users/Create.cshtml
+++ b/Kosmisch.Sample.OnPremisesAspnetApp/Views/Users/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm("Create", "Users", FormMethod.Post, new { enctype = "multipart/form-data" })) 
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
@@ -28,15 +28,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <label for="profile">プロフィール画像</label>
-            </div>
-            <div class="col-md-10">
-                <input type="file" name="profile" />
             </div>
         </div>
 
