[remove] HomeController and default comments

--- a/Kosmisch.Sample.OnPremisesAspnetApp/Views/Shared/_Layout.cshtml
+++ b/Kosmisch.Sample.OnPremisesAspnetApp/Views/Shared/_Layout.cshtml
@@ -17,14 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("アプリケーション名", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("ホーム", "Index", "Home")</li>
-                    <li>@Html.ActionLink("詳細", "About", "Home")</li>
-                    <li>@Html.ActionLink("問い合わせ", "Contact", "Home")</li>
-                </ul>
+                @Html.ActionLink("OnPremisesAspnetApp", "Index", "Users", new { area = "" }, new { @class = "navbar-brand" })
             </div>
         </div>
     </div>
